--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="PrimaryColor">#EEF4F3</color>
     <color name="OnPrimaryColor">#518DAF</color>
+    <color name="BackGroundColor">#9FC0D1</color>
     <color name="SecondaryColor">#FFFFFF</color>
     <color name="OnSecondaryColor">#9ECBC6</color>
     <color name="SurfaceColor"> #FFFFFF</color>
